# FitLife-Tracker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.MD  alembic.ini  docker-compose.yml  pyproject.toml  python_project_vs.py  requirements.txt
.github/workflows/: ci.yml
app/: __init__.py  catalog.py  cli.py  config.py  logging_config.py  main.py
app/api/: __init__.py  app.py  errors.py
app/api/dependencies/: __init__.py  auth.py  db.py  services.py
app/api/routers/: __init__.py  auth.py  logs.py  plan.py  profile.py  progress.py  recommendations.py
app/db/: __init__.py  base.py  engine.py  models.py
app/domain/: __init__.py  constants.py  enums.py  exceptions.py  meals.py  models.py  nutrition.py  recommendations.py  repositories.py  tracking.py
app/repositories/: __init__.py  plan_repository.py  profile_repository.py  refresh_token_repository.py  tracking_repository.py  user_repository.py
app/schemas/: __init__.py  auth.py  plan.py  profile.py  recommendation.py  tracking.py  user.py
app/security/: __init__.py  password.py  tokens.py
app/services/: __init__.py  auth_service.py  exceptions.py  plan_service.py  profile_service.py  recommendation_service.py  tracking_service.py
data/: exercises.json  foods.json
docs/: PROJECT_REPORT.md
migrations/: env.py
migrations/versions/: 511e22eda60e_add_tracking_logs_weight_water_food_.py  7cec25a080fd_add_users_refresh_tokens_plans_link_.py  e7e3df99d6ae_create_user_profiles.py
tests/: conftest.py  test_api.py  test_cli.py  test_config.py  test_logging_config.py  test_meals.py  test_nutrition.py  test_profile_repository.py  test_recommendations.py  test_repositories.py  test_security.py  test_services.py  test_tracking.py
