[project]
name = "fitlife-tracker"
version = "0.1.0"
description = "FitLife Tracker — a deterministic, evidence-based fitness & nutrition backend."
readme = "README.MD"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Ayush Pandey" }]

# Runtime dependencies. Kept intentionally minimal per phase; frameworks
# (FastAPI, SQLAlchemy, etc.) are introduced in later phases as needed.
dependencies = [
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.scripts]
fitlife-cli = "app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------------------------------------------------------------------
# Tooling configuration
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
# A pragmatic, production-oriented rule set.
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
# Domain code must be fully typed; tests may be looser.
files = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
