[project]
name = "fitlife-tracker"
version = "0.1.0"
description = "FitLife Tracker — a deterministic, evidence-based fitness & nutrition backend."
readme = "README.MD"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "Ayush Pandey" }]

# Runtime dependencies. Kept intentionally minimal per phase; frameworks
# (FastAPI, SQLAlchemy, etc.) are introduced in later phases as needed.
dependencies = [
    "alembic>=1.13",
    "argon2-cffi>=25.1.0",
    "fastapi>=0.139.0",
    "psycopg[binary]>=3.1",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "pyjwt>=2.13.0",
    "sqlalchemy>=2.0",
    "uvicorn[standard]>=0.49.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "pytest-cov>=5.0",
    "ruff>=0.5",
    "mypy>=1.10",
    "httpx>=0.28.1",
]

[project.scripts]
fitlife-cli = "app.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

# ---------------------------------------------------------------------------
# Tooling configuration
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py312"
line-length = 100
src = ["app", "tests"]
# Alembic-generated revision files follow the tool's own template, not our style.
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
# A pragmatic, production-oriented rule set.
select = ["E", "F", "I", "UP", "B", "SIM", "C4", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
# Domain code must be fully typed; tests may be looser.
files = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
